# glossary-bot

./: .dockerignore  .gitignore  .tool-versions  CHANGELOG.md  DEPLOY.md  Dockerfile  INSTALL.md  LICENSE  Pipfile  Procfile  README.md  app.json  app.py  deploy.template.yaml  manifest.json  package-lock.json  package.json  pyproject.toml  release.config.cjs  renovate.json  requirements.txt  setup.py
.do/: deploy.template.yaml
.github/workflows/: docker.yaml  main.yaml  release.yaml
alembic/: env.py
alembic/versions/: 04b2d51ca468_undo_postgres_items.py  201bae6698f6_added_search.py  4614666a279f_renamed_column_user_to_user_name.py  578b43a08697_initial_migration.py
gloss/: __init__.py  bot.py  errors.py  models.py  views.py
tests/: __init__.py  conftest.py  test_base.py  test_bot.py  test_bot_search.py
