[project]
name = "glossary-bot"
version = "20230805"
description = "Glossary Slack Bot"
requires-python = ">=3"
license = {file = "LICENSE"}
keywords = [
  "slack",
  "bot",
  "glossary",
  "onboarding",
  "integration",
  "bolt",
  "dictionary"
]
maintainers = [
  {name = "Gavin Mogan", email = "python@gavinmogan.com"}
]
dependencies = [
  "gunicorn==21.2.0",
  "alembic==1.12.0",
  "psycopg2-binary==2.9.9",
  "mysqlclient==2.2.0",
  "slack-bolt==1.18.0",
  "thefuzz==0.19.0",
  "thefuzz[speedup]==0.19.0",
  ## Test
  "responses==0.23.3",
  "flake8==6.0.0",
  "black==22.10.0",
  "pytest_alembic==0.10.7",
  "pytest==7.4.0",
  "pytest-mock-resources==2.9.1",
  "python_on_whales==0.64.0",
  "ruff==0.0.284"
]

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["gloss"]  # ["."] by default

[tool.ruff]
select = ["E", "F"]
target-version = "py310"
ignore = ["E501"]
exclude = [
  "migrations",
  "alembic/versions"
]

[tool.black]
line-length = 125

[tool.pytest.ini_options]
log_file = "logs/pytest.log"
log_file_level = "DEBUG"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
python_files = "test_*.py"
testpaths = [
    "tests",
    "integration",
]

[tool.flake8]
max-line-length = 125
exclude = [".gitignore","venv"]

[build-system]
requires = ["setuptools"]
